--- a/config.json
+++ b/config.json
@@ -1,1 +1,8 @@
 
+{
+  "ms" : 1500,
+  "roleToDisco" : ["Disco"], // اسم الرتبه
+  "prefix" : "&",
+  "allowedUsers" : [" 511491524077420555 "] // ايدي الي هيستعمل الامر
+}
+
